--- a/E_learning.ipynb
+++ b/E_learning.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/t-a-m-a-r-a/E_learning/blob/main/E_learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "R2PaSV0SrIYD"
       },
       "source": [
@@ -151,7 +141,7 @@
       },
       "outputs": [],
       "source": [
-        "assessments = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/assessments.csv')"
+        "assessments = pd.read_csv('assessments.csv')"
       ]
     },
     {
@@ -162,7 +152,7 @@
       },
       "outputs": [],
       "source": [
-        "courses = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/courses.csv')"
+        "courses = pd.read_csv('courses.csv')"
       ]
     },
     {
@@ -173,7 +163,7 @@
       },
       "outputs": [],
       "source": [
-        "student_registration = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/studentRegistration.csv')"
+        "student_registration = pd.read_csv('studentRegistration.csv')"
       ]
     },
     {
@@ -184,7 +174,7 @@
       },
       "outputs": [],
       "source": [
-        "student_assessment = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/studentAssessment.csv')"
+        "student_assessment = pd.read_csv('studentAssessment.csv')"
       ]
     },
     {
@@ -7801,8 +7791,7 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     }
   },
   "nbformat": 4,
