--- a/E_learning.ipynb
+++ b/E_learning.ipynb
@@ -151,7 +151,7 @@
       },
       "outputs": [],
       "source": [
-        "assessments = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/assessments.csv')"
+        "assessments = pd.read_csv('assessments.csv')"
       ]
     },
     {
@@ -162,7 +162,7 @@
       },
       "outputs": [],
       "source": [
-        "courses = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/courses.csv')"
+        "courses = pd.read_csv('courses.csv')"
       ]
     },
     {
@@ -173,7 +173,7 @@
       },
       "outputs": [],
       "source": [
-        "student_registration = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/studentRegistration.csv')"
+        "student_registration = pd.read_csv('studentRegistration.csv')"
       ]
     },
     {
@@ -184,7 +184,7 @@
       },
       "outputs": [],
       "source": [
-        "student_assessment = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/studentAssessment.csv')"
+        "student_assessment = pd.read_csv('studentAssessment.csv')"
       ]
     },
     {
